Closed Bug 385870 Opened 18 years ago Closed 18 years ago

[FIX]Incorrect layout for textarea with both "left" and "right" properties

Categories

(Core :: Layout: Form Controls, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta1

People

(Reporter: erik, Assigned: bzbarsky)

References

(Depends on 1 open bug)

Details

(Keywords: regression, testcase)

Attachments

(2 files)

If both left and right are set the element should adjust its width so that both the left and right are fulfilled. This works great with divs and other non form elements. Same applies to top and bottom.
Actually top+bottom seems to work OK.
Rewording summary so it's clear that this bug isn't about arrow keys.
Summary: Left + right does not work correctly for text areas → Incorrect layout for textarea with both "left" and "right" properties
Keywords: regression, testcase
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → INVALID
Oops, wait a sec, I marked this too fast; we're not following http://www.w3.org/TR/CSS21/visudet.html#abs-replaced-height correctly.
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
It looks like we need another codepath to deal with this situation; textareas are replaced and have an intrinsic height, but don't have an intrinsic ratio like images.
Assignee: nobody → bzbarsky
Status: REOPENED → ASSIGNED
Attachment #276239 - Flags: superreview?(dbaron)
Attachment #276239 - Flags: review?(dbaron)
Needs a regression test, still... I guess I'll write one when I go to check in if someone doesn't get to it before that.
OS: Windows Vista → All
Priority: -- → P3
Hardware: PC → All
Summary: Incorrect layout for textarea with both "left" and "right" properties → [FIX]Incorrect layout for textarea with both "left" and "right" properties
Target Milestone: --- → mozilla1.9 M9
Comment on attachment 276239 [details] [diff] [review] Fix for the height issue r+sr+a1.9=dbaron
Attachment #276239 - Flags: superreview?(dbaron)
Attachment #276239 - Flags: superreview+
Attachment #276239 - Flags: review?(dbaron)
Attachment #276239 - Flags: review+
Attachment #276239 - Flags: approval1.9+
Checked in, with tests.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago18 years ago
Flags: in-testsuite? → in-testsuite+
Resolution: --- → FIXED
Depends on: 393325
Attachment #276239 - Attachment description: Fix for the heigth issue → Fix for the height issue
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: