Make auto-height abs-pos textfields with top and bottom offsets both set use their intrinsic height, per spec.  Bug 385870, r+sr+a=dbaron